--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мое домашнее задание самостоятельное</title>
+    <title>Мое домашнее задание</title>
 </head>
 <body>
-   <header>
-    <nav>
+   <header>    
         <!--Logo-->
         <a href=""><span class="name-company-web">Web</span>Studio</a>
         <!--navigation-->
+    <nav>
         <ul class="site-nav list no-link">
             <li> <a class="link" href="">Портфолио</a></li>
             <li> <a class="link" href="">Студия</a></li>
             <li> <a class="link" href="">Контакты</a></li>
         </ul>
+    </nav>    
         <!--adress-->
         <ul class="site-auth list">
             <li><a href="mailto:"></a>mail </li>
             <li><a href="tel:"></a>phone </li>
         </ul>
-    </nav>
+    
    </header>
    <main>
        <section>
@@ -60,28 +61,28 @@
        <section class="section">
            <h2 class="section-title">Чем мы занимаемся?</h2>
            <ul>
-                <li> <a href=""> <img src="./img/box1.jpg" alt="Картинка1"></a></li>
-                <li> <a href=""> <img src="./img/box2.jpg" alt="Картинка2"></a></li>
-                <li> <a href=""> <img src="./img/box3.jpg" alt="Картинка3"></a></li>
+                <li> <a href=""> <img src="./images/box1.jpg" width="370" alt="Компьютер на столе"></a></li>
+                <li> <a href=""> <img src="./images/box2.jpg" width="370" alt="Мобильное приложение"></a></li>
+                <li> <a href=""> <img src="./images/box3.jpg" width="370" alt="Палитра на планшете"></a></li>
            </ul>
        </section>
        <!--наша команда-->
        <section>
            <h2>Наша команда</h2>
            <ul>
-               <li><img src="./img/d.jpg" alt="Игорь Демьяненко">
+               <li><img src="./images/d.jpg" width="270" alt="Игорь Демьяненко">
                 <h3>Игорь Демьяненко</h3>
                 <p>Product Designer</p>
                 </li>
-                <li><img src="./img/r.jpg" alt="Ольга Репина">
+                <li><img src="./images/r.jpg" width="270" alt="Ольга Репина">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
-                <li><img src="./img/t.jpg" alt="Николай Тарасов">
+                <li><img src="./images/t.jpg" width="270" alt="Николай Тарасов">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
-                <li><img src="./img/e.jpg" alt="Михаил Ермаков">
+                <li><img src="./images/e.jpg" width="270" alt="Михаил Ермаков">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
