Внес изменения после первой проверки
Картинки "чем занимаемся" не ссылки
Исправлен адрес и почта
Исправлен адрес в footer

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </nav>
       <!--adress-->
       <ul class="site-auth list">
-        <li><a href="mailto:"></a>mail</li>
-        <li><a href="tel:"></a>phone</li>
+        <li><a href="mailto:">mail</a></li>
+        <li><a href="tel:">phone</a></li>
       </ul>
     </header>
     <main>
@@ -60,13 +60,13 @@
         <h2 class="section-title">Чем мы занимаемся?</h2>
         <ul>
           <li>
-            <a href=""> <img src="./images/box1.jpg" width="370" alt="Компьютер на столе" /></a>
+            <img src="./images/box1.jpg" width="370" alt="Компьютер на столе" />
           </li>
           <li>
-            <a href=""> <img src="./images/box2.jpg" width="370" alt="Мобильное приложение" /></a>
+            <img src="./images/box2.jpg" width="370" alt="Мобильное приложение" />
           </li>
           <li>
-            <a href=""> <img src="./images/box3.jpg" width="370" alt="Палитра на планшете" /></a>
+            <img src="./images/box3.jpg" width="370" alt="Палитра на планшете" />
           </li>
         </ul>
       </section>
@@ -102,7 +102,7 @@
       <a href=""><span class="name-company-web">Web</span>Studio</a>
       <address>
         <ul>
-          <li><span>г. Киев, пр-т Леси Украинки, 26</span></li>
+          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
           <li><a href="mailto:"></a>mail</li>
           <li><a href="tel:"></a>phone</li>
         </ul>
